<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz_app">Quiz App</string>
    <string name="play_quiz">Play Quiz!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_label">Category:</string>
    <string name="difficulty_label">Difficulty:</string>
    <string name="type_label">Type:</string>
    <string name="questions_number_label">Questions Number:</string>
    <string name="time_limit_label">Time Limit:</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="create_quiz_message">Choose the quiz specifications</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="hard_label">Hard</string>
    <string name="any_label">Any</string>
    <string name="multiple_choices_label">Multiple Choices</string>
    <string name="true_false_label">True or False</string>
    <string name="done_button">Done</string>
    <string name="cancel_button">Cancel</string>
    <string name="choose_category_label">Choose category option</string>
    <string name="choose_difficulty_label">Choose difficulty option</string>
    <string name="choose_type_label">Choose type option</string>
    <string name="your_score_title">Your Score:</string>
    <string name="score_label">%1$d/%2$d</string>
    <string name="play_again_button">Play Again</string>
    <string name="create_new_quiz_button">Create New Quiz</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="quit_quiz_alert_title">Quit Quiz?</string>
    <string name="quit_quiz_alert_message">Are you sure you want to quit the current quiz?</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_out">Log Out</string>
    <string name="hello_message">Hello, %1$s</string>
    <string name="history">History</string>
    <string name="date">Date:</string>
    <string name="score">Score:</string>
    <string name="time_limit">Time Limit:</string>
    <string name="time_limit_value">%1$d secs</string>
</resources>