<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="@dimen/option_dialog_min_width"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/optionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/choose_difficulty_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/SelectOptionsTitleStyle"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/optionsList"
        android:layout_width="match_parent"
        style="@style/SelectOptionsListStyle"
        app:layout_constraintTop_toBottomOf="@id/optionTitle"
        tools:listitem="@layout/option_item_layout"
        tools:itemCount="4"/>
    <TextView
        android:id="@+id/doneButton"
        android:text="@string/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/optionsList"
        style="@style/SelectOptionsDialogButtonStyle"/>
    <TextView
        android:id="@+id/cancelButton"
        android:text="@string/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/doneButton"
        app:layout_constraintTop_toBottomOf="@id/optionsList"
        style="@style/SelectOptionsDialogButtonStyle"/>
</androidx.constraintlayout.widget.ConstraintLayout>