<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/dateValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintStart_toEndOf="@id/dateLabel"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="04/11/2020"/>
    <TextView
        android:id="@+id/scoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateLabel"
        android:text="@string/score"/>
    <TextView
        android:id="@+id/scoreValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintStart_toEndOf="@id/scoreLabel"
        app:layout_constraintTop_toBottomOf="@id/dateValue"
        tools:text="3/5"/>
    <TextView
        android:id="@+id/timeLimitLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_limit"
        app:layout_constraintTop_toBottomOf="@id/scoreLabel"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/timeLimitValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/timeLimitLabel"
        app:layout_constraintTop_toBottomOf="@id/scoreValue"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        tools:text="5s"/>
</androidx.constraintlayout.widget.ConstraintLayout>